# tauri-toolkit

./: Cargo.toml  LICENSE_MIT  README.md  bacon.toml  biome.json  package.json  pnpm-lock.yaml  renovate.json  tsconfig.base.json
libs/app-icon/: Cargo.toml  README.md
libs/app-icon/src/: lib.rs
libs/app-icon/src/macos/: mod.rs  request.rs  tests.rs
libs/app-icon/src/windows/: mod.rs  tests.rs
libs/border/: Cargo.toml  README.md
libs/border/src/: lib.rs
libs/border/src/macos/: border.rs  mod.rs  tag.rs
libs/color/: Cargo.toml
libs/color/src/: lib.rs
libs/color/src/macos/: color.rs
libs/example/: Cargo.toml
libs/example/src/: lib.rs
libs/menubar/: Cargo.toml  README.md
libs/menubar/src/: lib.rs
libs/menubar/src/macos/: menubar.rs  mod.rs  tests.rs
libs/monitor/: Cargo.toml  README.md
libs/monitor/src/: lib.rs
libs/monitor/src/macos/: mod.rs  monitor.rs  tests.rs  utils.rs
libs/popover/: Cargo.toml  README.md
libs/popover/src/: lib.rs
libs/popover/src/macos/: mod.rs  popover.rs
libs/share-picker/: Cargo.toml  README.md
libs/share-picker/src/: README.md  lib.rs
libs/share-picker/src/macos/: mod.rs  share.rs
libs/system-notification/: Cargo.toml  README.md
libs/system-notification/src/: lib.rs
libs/system-notification/src/macos/: app_handle.rs  mod.rs
plugins/toast/: Cargo.toml  README.md
plugins/toast/.changes/: config.json  initial-release.md  readme.md
plugins/toast/examples/vanilla/: index.html  package.json  pnpm-lock.yaml
plugins/toast/examples/vanilla/src/: main.ts
plugins/toast/examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
plugins/toast/examples/vanilla/src-tauri/src/: main.rs
plugins/toast/guest-js/: index.ts
plugins/toast/src/: lib.rs  structs.rs  toaster.rs
plugins/toast/src/linux/: mod.rs
plugins/toast/src/macos/: mod.rs  toast.rs  toast_label.rs  toast_panel.rs  utils.rs
shared/: rollup.config.mjs  tsconfig.json
shared/template/: lib.md
