[workspace]
members = ["libs/*"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
log = "0.4.21"
tauri = "1"
tauri-build = "1"
serde_json = "1"
thiserror = "1"

cocoa = "0.25.0"
objc = "0.2.7"
core-foundation = "0.9.4"
core-graphics = "0.23.2"
objc_id = { version = "0.1.1" }
objc-foundation = { version = "0.1.1" }
objc2-foundation = { version = "0.2.0", features = ["NSGeometry"] }
objc2-app-kit = { version = "0.2.0", features = ["NSBezierPath"] }

[workspace.package]
edition = "2021"
authors = ["Victor Aremu <victor.olorunbunmi@gmail.com>"]
license = "Apache-2.0 OR MIT"
rust-version = "1.64"
