[package]
name = "app-icon"
version = "0.1.0"
description = "A library to retrieve an app's icon"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true

[target."cfg(target_os = \"macos\")".dependencies]
cocoa.workspace = true
objc.workspace = true
core-foundation.workspace = true

[target."cfg(target_os = \"windows\")".dependencies]
windows-sys.workspace = true
image.workspace = true