[package]
name = "color"
version = "0.1.0"
description = "color utils"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target."cfg(target_os = \"macos\")".dependencies]
tauri.workspace = true
cocoa.workspace = true
