[package]
name = "menubar"
version = "0.1.0"
description = "A library to get information about menubar"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true

[target."cfg(target_os = \"macos\")".dependencies]
tauri.workspace = true
serde.workspace = true
cocoa.workspace = true
objc.workspace = true
core-foundation.workspace = true
core-graphics.workspace = true
