[package]
name = "popover"
version = "0.1.0"
description = "A popover view to WebviewWindow"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true

[target."cfg(target_os = \"macos\")".dependencies]
tauri.workspace = true
serde.workspace = true
cocoa.workspace = true
objc.workspace = true
objc_id.workspace = true
core-foundation.workspace = true
core-graphics.workspace = true
objc-foundation.workspace = true
objc2-foundation.workspace = true
objc2-app-kit.workspace = true
