[package]
name = "system-notification"
version = "0.1.0"
description = "Listen to System or Workspace notification"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri.workspace = true

[target."cfg(target_os = \"macos\")".dependencies]
cocoa.workspace = true
objc.workspace = true
block.workspace = true
