[package]
name = "tauri-plugin-toast"
version = "0.0.0"
description = "A Tauri plugin for in app toasts"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
tauri.workspace = true
thiserror.workspace = true
queue.workspace = true
markdown.workspace = true

[target."cfg(target_os = \"macos\")".dependencies]
cocoa.workspace = true
objc.workspace = true
objc_id.workspace = true
objc-foundation.workspace = true
core-foundation.workspace = true
core-graphics.workspace = true
