[package]
name = "toast-example"
version = "0.0.0"
description = "A Tauri app to demonstrate the toast plugin"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build.workspace = true
tauri-build.features = []

[dependencies]
tauri-plugin-toast = { path = "../../../" }
tauri.workspace = true
tauri.features = []
serde.workspace = true
serde_json.workspace = true

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
